Add Netlify SPA redirect

--- a/CLIENT/public/index.html
+++ b/CLIENT/public/index.html
@@ -9,6 +9,8 @@
       content="Code Explainer IDE - AI-powered code explanation tool"
     />
     <title>Code Explainer IDE</title>
+    <script type="module" src="/src/main.jsx"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
